--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/stack": "^6.3.10",
+    "axios": "^1.2.3",
     "expo": "~47.0.9",
     "expo-av": "~13.0.2",
     "expo-status-bar": "~1.4.2",
