--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
     "dotenv": "^16.0.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "braintree": "^3.12.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "zod": "^3.21.4"
   }
 }
