--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "braintree": "^3.12.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
