--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
+    "nodemailer": "^6.9.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   }
