--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,16 @@
     "@react-navigation/stack": "^6.3.10",
     "axios": "^1.2.3",
     "expo": "~47.0.9",
-    "expo-av": "~13.0.2",
+    "expo-av": "~13.0.3",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react-hook-form": "^7.43.9",
+    "react-native": "0.70.8",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-webview": "^11.26.0"
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
