--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.43.9",
     "react-native": "0.70.8",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-modal": "^13.0.1",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-webview": "11.23.1"
   },
