--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-webview": "11.23.1"
+    "react-native-webview": "11.23.1",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
