--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.2.3",
     "expo": "~47.0.9",
     "expo-av": "~13.0.3",
+    "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
+    "jwt-decode": "^3.1.2",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-hook-form": "^7.43.9",
