--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
     "@react-navigation/stack": "^6.3.10",
     "axios": "^1.2.3",
     "expo": "~47.0.9",
-    "expo-av": "~13.0.3",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
@@ -26,7 +25,8 @@
     "react-native-modal": "^13.0.1",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-webview": "11.23.1",
-    "zustand": "^4.3.7"
+    "zustand": "^4.3.7",
+    "expo-av": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
