--- a/client/package.json
+++ b/client/package.json
@@ -1,21 +1,23 @@
 {
   "name": "passapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.10",
     "@tanstack/react-query": "^4.29.5",
     "axios": "^1.2.3",
-    "expo": "~47.0.9",
+    "expo": "~47.0.14",
     "expo-av": "~13.0.3",
     "expo-secure-store": "~12.0.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "jwt-decode": "^3.1.2",
@@ -23,11 +25,15 @@
     "react": "18.1.0",
     "react-hook-form": "^7.43.9",
     "react-native": "0.70.8",
-    "react-native-gesture-handler": "^2.8.0",
     "react-native-modal": "^13.0.1",
+    "react-native-nfc-manager": "^3.14.3",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.5.2",
+    "react-native-screens": "^3.20.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-webview": "11.23.1",
-    "zustand": "^4.3.7"
+    "zustand": "^4.3.7",
+    "react-native-gesture-handler": "~2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
