--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "A server for Pass application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -12,7 +12,10 @@
   "author": "Amit Hemo & Nadav Buchwalter",
   "license": "ISC",
   "devDependencies": {
-    "dotenv": "^16.0.3"
+    "@types/jest": "^29.5.1",
+    "dotenv": "^16.0.3",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -21,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.0.1",
     "nodemailer": "^6.9.1",
     "puppeteer": "^20.2.0",
