--- a/client/app.json
+++ b/client/app.json
@@ -43,6 +43,7 @@
       "eas": {
         "projectId": "606915b6-ef44-4353-b2a7-419f791117a7"
       }
-    }
+    },
+    "owner": "nadavbu"
   }
 }
