--- a/client/eas.json
+++ b/client/eas.json
@@ -5,15 +5,16 @@
   "build": {
     "development": {
       "distribution": "internal",
-      "android": {
-        "gradleCommand": ":app:assembleDebug"
-      },
+      "developmentClient": "true",
       "ios": {
         "buildConfiguration": "Debug"
       }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "gradleCommand": ":app:assembleDebug"
+      }
     },
     "production": {
       "android": {
