--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,14 @@
     "react-native-url-polyfill": "^1.3.0",
     "react-native-webview": "11.23.1",
     "zustand": "^4.3.7",
-    "react-native-gesture-handler": "~2.8.0"
+    "react-native-gesture-handler": "~2.8.0",
+    "expo-auth-session": "~3.8.0",
+    "expo-crypto": "~12.0.0",
+    "expo-web-browser": "~12.0.0",
+    "expo-random": "~13.0.0",
+    "expo-dev-client": "~2.0.1",
+    "expo-system-ui": "~2.0.1",
+    "expo-constants": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
