--- a/client/app.json
+++ b/client/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
     "name": "passapp",
-    "slug": "passapp", 
+    "slug": "passapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -26,7 +26,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#3BABFE"
       },
       "permissions": [
         "android.permission.NFC"
@@ -39,11 +39,11 @@
     "plugins": [
       "react-native-nfc-manager"
     ],
+    "owner": "nadavbu",
     "extra": {
       "eas": {
-        "projectId": "606915b6-ef44-4353-b2a7-419f791117a7"
+        "projectId": "1e1507f8-5793-40a8-ac65-e7323115a458"
       }
-    },
-    "owner": "nadavbu"
+    }
   }
 }
