--- a/client/package.json
+++ b/client/package.json
@@ -15,16 +15,25 @@
     "@tanstack/react-query": "^4.29.5",
     "axios": "^1.2.3",
     "expo": "~47.0.14",
+    "expo-auth-session": "~3.8.0",
     "expo-av": "~13.0.3",
+    "expo-constants": "~14.0.2",
+    "expo-crypto": "~12.0.0",
+    "expo-dev-client": "~2.0.1",
+    "expo-random": "~13.0.0",
     "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-system-ui": "~2.0.1",
     "expo-updates": "~0.15.6",
+    "expo-web-browser": "~12.0.0",
     "jwt-decode": "^3.1.2",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-hook-form": "^7.43.9",
     "react-native": "0.70.8",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-nfc-manager": "^3.14.3",
     "react-native-reanimated": "~2.12.0",
@@ -32,15 +41,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-webview": "11.23.1",
-    "zustand": "^4.3.7",
-    "react-native-gesture-handler": "~2.8.0",
-    "expo-auth-session": "~3.8.0",
-    "expo-crypto": "~12.0.0",
-    "expo-web-browser": "~12.0.0",
-    "expo-random": "~13.0.0",
-    "expo-dev-client": "~2.0.1",
-    "expo-system-ui": "~2.0.1",
-    "expo-constants": "~14.0.2"
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
