--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,12 @@
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "mongoose": "^7.0.1",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "puppeteer": "^20.2.0",
     "uuid": "^9.0.0",
+    "winston": "^3.9.0",
+    "winston-daily-rotate-file": "^4.7.1",
     "zod": "^3.21.4"
   }
 }
