--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.43.9",
     "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-hce": "^0.2.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-nfc-manager": "^3.14.3",
